--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "jszip": "^3.9.1"
+    "jszip": "^3.9.1",
+    "pdfreader": "^2.0.0"
   }
 }
